--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-//    compile("org.springframework.boot:spring-boot-starter-data-cassandra")
-//    compile("com.datastax.cassandra:cassandra-driver-core")
+    compile("org.springframework.boot:spring-boot-starter-data-cassandra")
+    compile("com.datastax.cassandra:cassandra-driver-core")
     compile("org.projectlombok:lombok:1.16.4")
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
