--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin: 'spring-boot'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -26,8 +26,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-cassandra")
     compile("com.datastax.cassandra:cassandra-driver-core")
     compile("org.projectlombok:lombok:1.16.4")
-
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile("junit:junit:4.11")
 }
 
 task wrapper(type: Wrapper) {
