--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,13 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-data-cassandra")
-    compile("com.datastax.cassandra:cassandra-driver-core")
+    //compile("org.springframework.boot:spring-boot-starter-data-cassandra")
+    //compile("com.datastax.cassandra:cassandra-driver-core")
     compile("org.projectlombok:lombok:1.16.4")
     compile("junit:junit:4.11")
+    
+    compile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.1.0'
+    
 }
 
 task wrapper(type: Wrapper) {
