--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     //compile("com.datastax.cassandra:cassandra-driver-core")
     compile("org.projectlombok:lombok:1.16.4")
     compile("junit:junit:4.11")
-    
+    // https://mvnrepository.com/artifact/org.apache.cassandra/cassandra-all
+
+	compile group: 'org.apache.cassandra', name: 'cassandra-all', version: '3.7'
     compile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.1.0'
     
 }
