--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile("junit:junit:4.11")
     // https://mvnrepository.com/artifact/org.apache.cassandra/cassandra-all
 
-	compile group: 'org.apache.cassandra', name: 'cassandra-all', version: '3.7'
+	//compile group: 'org.apache.cassandra', name: 'cassandra-all', version: '3.7'
     compile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.1.0'
     
 }
