--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin: 'spring-boot'
+apply plugin: 'war'
+
 
 sourceCompatibility = 1.8
 
@@ -38,13 +40,7 @@ task wrapper(type: Wrapper) {
     gradleVersion = '3.0'
 }
 
-task fatJar(type: Jar) {
-	manifest {
-        attributes 'Implementation-Title': 'Gradle Jar File Example',
-        	'Implementation-Version': version,
-        	'Main-Class': 'br.edu.scalability.Application'
-    }
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+war {
+    baseName = 'scalability-rest'
+    version =  '0.5.0'
 }
