--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+    
     //compile("org.springframework.boot:spring-boot-starter-data-cassandra")
     //compile("com.datastax.cassandra:cassandra-driver-core")
     compile("org.projectlombok:lombok:1.16.4")
