--- a/build.war.gradle
+++ b/build.war.gradle
@@ -27,9 +27,13 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     
     
+    //compile("org.springframework.boot:spring-boot-starter-data-cassandra")
+    //compile("com.datastax.cassandra:cassandra-driver-core")
     compile("org.projectlombok:lombok:1.16.4")
     compile("junit:junit:4.11")
+    // https://mvnrepository.com/artifact/org.apache.cassandra/cassandra-all
 
+	//compile group: 'org.apache.cassandra', name: 'cassandra-all', version: '3.7'
     compile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.1.0'
     
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
@@ -37,17 +41,6 @@ dependencies {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '3.0'
-}
-
-task fatJar(type: Jar) {
-	manifest {
-        attributes 'Implementation-Title': 'Gradle Jar File Example',
-        	'Implementation-Version': version,
-        	'Main-Class': 'br.edu.scalability.Application'
-    }
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
 }
 
 war {
